heading in things/show always same width as description if there are #controls.

--- a/app/stylesheets/katalog.less
+++ b/app/stylesheets/katalog.less
@@ -487,6 +487,7 @@ div.entry {
 	div#controls + h1 { 
 		float:left;
 		clear: none;
+		width: 470px;
 	}
 	div#controls + h1 + * { clear: both; }
 }
