--- a/public/stylesheets/katalog.css
+++ b/public/stylesheets/katalog.css
@@ -437,6 +437,7 @@ div.entry div#controls {
 div.entry div#controls + h1 {
   float: left;
   clear: none;
+  width: 470px;
 }
 div.entry div#controls + h1 + * { clear: both; }
 #page, .user {
