adding hyphenator "easy" (like told on http://code.google.com/p/hyphenator/wiki/en_HowToUseHyphenator). also, output should now validate as HTML5.

--- a/app/views/things/show.html.erb
+++ b/app/views/things/show.html.erb
@@ -9,7 +9,7 @@
 	
 	<h1 class="title"><%= @thing.title %></h1>
 	
-	<div class="description grid_12">
+	<div class="description grid_12 hyphenate">
 		<%=format_user_text @thing.description %>
 	</div>
 
