--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,9 @@
   <!--[if IE]><![endif]-->
 
   <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame 
-       Remove this if you use the .htaccess -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+       Remove this if you use the .htaccess
+       Erm, also it breaks validation as only error. Out for now. -->
+<!--   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> -->
 
   <title>bau-ha.us | <%= controller.controller_name %> </title>
   <meta name="description" content="">
@@ -123,7 +124,10 @@
 
   <!-- Javascript at the bottom for fast page loading -->
 
-  <%= javascript_include_tag 'jquery-1.4.2.min', 'rails', 'jquery.mousewheel-3.0.2.pack', 'jquery.fancybox-1.3.1.pack', 'jquery.oembed-1.0.1', 'application' %>
+  <%= javascript_include_tag 'jquery-1.4.2.min', 'rails', 'hyphenate', 'jquery.mousewheel-3.0.2.pack', 'jquery.fancybox-1.3.1.pack', 'jquery.oembed-1.0.1', 'application' %>
+
+	<script src="http://yourdomain.com/path/hyphenate.js" type="text/javascript">
+	</script>
 
   <!--[if lt IE 7 ]>
     <script src="js/dd_belatedpng.js?v=1"></script>
