smaller site-button, no initial viewport scaling for now

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
   initial-scale = 1.0 retains dimensions instead of zooming out if page height > device height
   maximum-scale = 1.0 retains dimensions instead of zooming in if page width < device width
   -->
-  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
+<!--   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;"> -->
 
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root of your domain and delete these references -->
@@ -55,7 +55,7 @@
 	<div class="grid_6">
 		<div id="site-button">
 			<a href="http://bau-ha.us/">
-			<%= image_tag 'bau_haus-sitebutton-grey-23px.png', :id=>"site-img" %>
+			<%= image_tag 'bau_haus-sitebutton-grey-17px.png', :id=>"site-img" %>
 			</a>
 		</div>
 		<h1 id="site-title">
