--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 
   <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame 
        Remove this if you use the .htaccess
-       Erm, also it breaks validation as only error. Out for now. -->
+       ErmÉ also, it breaks validation as the only error. Out for now. -->
 <!--   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> -->
 
   <title>bau-ha.us | <%= controller.controller_name %> </title>
@@ -52,16 +52,11 @@
 
 <header class="container_24">
 
-	<div class="grid_6">
-		<div id="site-button">
-			<a href="http://bau-ha.us/">
-			<%= image_tag 'bau_haus-sitebutton-grey-17px.png', :id=>"site-img" %>
-			</a>
-		</div>
-		<h1 id="site-title">
+	<hg>
+		<h1 id="site-title" class="grid_6">
 			<%= link_to 'Katalog', root_path %>
 		</h1>
-	</div>
+	</hg>
 
 	<div id="access" role="navigation" class="grid_12 menu">
 		<ul>
@@ -113,14 +108,18 @@
 </div> <!-- end #page -->
 <div class="clear"></div>
 	
-<!--
 <footer class="container_24">
 	
-	<div id="footer-1" class="grid_24 footer">
+	<div id="footer-1" class="grid_6 footer">
+		bau-ha.us/KATALOG v0.2 beta. <a href="http://github.com/bauhaus/KATALOG/">Sourcecode</a>.
 	</div>
-	
-</footer>
---> <!-- end footer -->
+	<div id="footer-2" class="grid_6 footer">
+		Problems/Bugs? <a href="mailto:office@bau-ha.us">Email</a> us or file an <a href="http://github.com/bauhaus/KATALOG/issues">issue</a>.
+	</div>
+	<div id="footer-3" class="grid_6 push_6 footer">
+		Powered by <a href="http://rubyonrails.org/">Ruby on Rails</a> and <a href="http://m18.bau-ha.us/initiativen/s140">fair trade coffee</a>.
+	</div>
+</footer> <!-- end footer -->
 
   <!-- Javascript at the bottom for fast page loading -->
 
