links to things in our fake widget

--- a/app/views/thing_lists/show.html.erb
+++ b/app/views/thing_lists/show.html.erb
@@ -1,13 +1,18 @@
-<p id="notice"><%= notice %></p>
+<div class="bau_haus-katalog-widget">
+	
+	<h2>List: <%= @thing_list.title %></h2>
+	  
+	<ul>
+	<% @thing_list.thing_list_items.each do |item| %>
+		<li><%= link_to item.thing.title, item.thing %></li>
+	<% end -%>
+	</ul>
+	
+</div>
 
-<h2>List: <%= @thing_list.title %></h2>
-  
-<ul>
-<% @thing_list.thing_list_items.each do |item| %>
-	<li><%= item.thing.title %></li>
-<% end -%>
-</ul>
-
+<!--
 
 <%= link_to 'Edit', edit_thing_list_path(@thing_list) %> |
 <%= link_to 'Back', thing_lists_path %>
+
+-->
